[package]
name = "postgres-with-quic"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
criterion = { version = "0.7.0", features = ["async_tokio"] }
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
pin-project = "1.1.10"
quinn = "0.11.8"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
s2n-quic = { version = "1.63.0", features = ["provider-tls-rustls"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13.0"
